# afromart

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  SETUP.md  dev_requirements.pip  fly.toml  pyproject.toml  pytest.ini  requirements.pip
.githooks/: pre-commit
.github/: CODEOWNERS
.github/workflows/: devops.yml
.taskwarrior/: taskchampion.sqlite3
afromart/: manage.py
afromart/afromart/: settings.py  urls.py  wsgi.py
afromart/afromart/context_processors/: __init__.py  constants.py
afromart/catalogue/: urls.py
afromart/gate/: apps.py  urls.py
afromart/gate/forms/: __init__.py  email.py  password_reset.py  signin.py  signup.py
afromart/gate/templates/gate/: password_reset.html  password_reset_request.html  signin.html  signup.html  signup_verified.html  signup_verify.html
afromart/gate/templates/gate/email/: password_reset_request.tmpl  signup_verify.tmpl
afromart/gate/tests/views/: test_all.py
afromart/gate/views/: __init__.py  password_reset.py  password_reset_request.py  signin.py  signout.py  signup.py  signup_verify.py
afromart/payment/: urls.py
afromart/product/: urls.py
afromart/product/migrations/: 0001_initial.py
afromart/product/models/: product.py
afromart/shipping/: urls.py
afromart/static_global/css/: bootstrap.css  ui.css
afromart/static_global/img/favicon/: site.webmanifest
afromart/templates/: base.html  favicon.html  ogp.html
afromart/trader/: urls.py
config/dev/: envvars.sh
doc/research/: payment_gateways.md
