[project]
name = "afromart"
version = "0.1"
description = "The marketplace for Africa."
authors = [{ name = "Timothy Makobu", email = "timothy@makobu.name" }]
readme = "README.md"


requires-python = ">=3.14,<3.15"
dependencies = [
    "redis>=6.4.0",
    "django>=5.2.7",
    "psycopg>=3.2.10",
    "gunicorn>=23.0.0",
    "django-htmx>=1.26.0",
]


[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "djlint>=1.36.4",
    "ipython>=9.4.0",
    "django-stubs>=5.2.2",
    "pytest-django>=4.11.1",
]
lab = ["ipykernel>=6.30.1"]


[tool.djlint]
profile = "django"
ignore = "H031,H006"


[tool.ruff]
# Select only formatting and import-related rules
lint.select = ["I", "F", "E", "E2", "F401", "W", "UP"]

# Explicitly disable rules that overlap with Pylance
lint.ignore = ["F821", "F822", "F823"]

# Don't highlight formatting errors as I type.
lint.extend-ignore = [
    "F821",
    "F822",
    "F823",
    "E",
    "W",
    "RUF",
    "I001",
    "F841",
    "UP012",
]

# Highlight but don't remove unsued imports 
unfixable = ["F401"]
